--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -413,5 +413,21 @@ ul{
 
         }
     }
+    .section-9{
+        a {
+
+                text-decoration: none;
+
+            }
+      .card{
+        border-radius: 40px;
+
+        .card-body{
+            border-radius: 40px;
+
+        }
+
+      }
+    }
 
 }
