--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -376,4 +376,11 @@ ul{
       }
     }
 
+
+    .no-margin {
+        margin-top: 0 !important;
+      }
+   .text-warning{
+      margin-top: -441px !important;
+   }
 }
