--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -26,6 +26,12 @@ h3 {
 
 p{
     font-size: 1.2em;
+   
+}
+
+p-2{
+    font-size: 1.2em;
+    color: #f6f0f0;
 }
 .bg-light{
     background: $light-background;
