--- a/src/assets/css/Header.scss
+++ b/src/assets/css/Header.scss
@@ -1,7 +1,13 @@
 .sticky-header {
-  position: sticky;
-  top: 0;
-  z-index: 999;
-  background: #fff;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    position: sticky;
+    top: 0;
+    z-index: 999;
+    background: #fff;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.navbar .nav-link:hover {
+    background-color: green !important;
+    color: white !important;
+    border-radius: 5px;
 }
