--- a/src/assets/css/banner.scss
+++ b/src/assets/css/banner.scss
@@ -1,5 +1,5 @@
 .hero-section {
-    min-height: 100vh;
+    min-height: 75vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -66,7 +66,7 @@
     position: absolute;
     top: 20px;
     right: 60px;
-    background: #00aaff;
+    background: #e21010;
     padding: 10px 15px;
     font-weight: bold;
     transform: rotate(-10deg);
